fix contrast

--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -36,6 +36,7 @@ $darkPurple: #5A496A;
 }
 
 @mixin active-button {
+  border: 3px solid $green;
   background-color: $darkPurple;
   color: white;
 }
@@ -59,15 +60,15 @@ body, html, #root, main {
 }
 
 h1 {
-  font-size: 4rem;
+  font-size: 3rem;
 }
 h2 {
-  font-size: 3rem;
+  font-size: 2rem;
   margin-top: 1rem;
   margin-bottom: 1rem;
 }
 h3 {
-  font-size: 2.5rem;
+  font-size: 1.5rem;
 }
 
 a {
@@ -89,13 +90,14 @@ a {
 // SHARED STYLING
 
 .button {
-  color: $darkPurple;
-  padding: 15px;
-  margin: 20px;
+  border: 3px solid $darkPurple;
+  color: white;
+  padding: 10px;
+  margin: 15px;
   border-radius: 25px;
   font-weight: 600;
-  background-color: $green;
-  border-color: $green;
+  background-color: $darkPurple;
+  border-color: $darkPurple;
   &:hover {
     @include active-button;
   }
@@ -115,6 +117,12 @@ a {
 .home {
   @include zero-margin;
   @include fill-container;
+  height: 100vh !important;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  padding: 1rem;
   flex-flow: column nowrap;
   background-image: url("../images/hero.jpg");
   background-position: center;
@@ -122,8 +130,8 @@ a {
   background-size: cover;
 }
 
-.heading {
-  font-size: 4rem;
+.home__heading {
+  background: rgba(0, 0, 0, 0.5);
   font-weight: 600;
   color: white;
   text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5)
@@ -201,7 +209,6 @@ a {
   display: flex;
   flex-flow: column wrap;
   align-items: center;
-  justify-content: center;
   margin: 0 auto;
   padding: 0;
   width: 100%;
@@ -218,7 +225,8 @@ a {
   height: 100%;
 }
 
-.carousel__button-container {
+.button-container {
   width: 100%;
-  height: 33%;
+  @include flex-center;
+  flex-flow: column nowrap;
 }
